//版本号
syntax ="proto3";
//指定报名
package proto;
//定义结构体
message UserRequest{
  //定义用户名
  string name = 1;
}
message UserRespones{
  int32 id =1;
  string  name =2;
  int32 age =3;
  repeated string hobby=4;
}
service UserInfoService{
  rpc GetUserInfo(UserRequest)returns(UserRespones){}
}